fix: connect lato to form and fix overflow text in name in section about us

--- a/style.css
+++ b/style.css
@@ -459,6 +459,8 @@ main .aboutUs .contain .people .person .name {
   font-family: "lato-black";
   font-size: 18px;
   line-height: 18px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   overflow: hidden;
 }
 
@@ -556,6 +558,7 @@ main .getQuote .formSubmit .form {
 }
 
 main .getQuote .formSubmit .input-text {
+  font-family: 'lato-regular';
   height: 38px;
   max-width: 100%;
   min-width: 100%;
